feat: implementação do método de atualização
