# app/Http/Controllers/OrderTravelController.php
@@ -7,6 +7,7 @@ use App\Http\Requests\Travel\OrderTravelShowRequest;
 use App\Http\Requests\Travel\OrderTravelStoreRequest;
 use App\Http\Requests\Travel\OrderTravelUpdateRequest;
 use App\Services\OrderTravelService;
+use Exception;
 use Illuminate\Http\JsonResponse;
 use Symfony\Component\HttpFoundation\Response;
 
@@ -99,13 +100,13 @@ class OrderTravelController extends Controller
      *  @OA\RequestBody( description="Dados necessários para criar um pedido de viagem", required=true,
      *  @OA\JsonContent(ref="#/components/schemas/OrderTravelStoreRequest")),
      *      @OA\Response(
-     *          response=200,
+     *          response=201,
      *          description="Solicitação de viagem criada com sucesso.",
      *          @OA\JsonContent(
      *              type="object",
      *                  @OA\Property(property="message", type="string", example="Solicitação de viagem criada com sucesso."),
      *                  @OA\Property(property="data", type="object",
-     *                  @OA\Property(property="name_applicant", type="string", example="Testesolicitandte"),
+     *                  @OA\Property(property="name_applicant", type="string", example="Teste de solicitante"),
      *                  @OA\Property(property="destination", type="string", example="Belo Horizonte"),
      *                  @OA\Property(property="departure_date", type="string", format="date-time", example="2025-02-06 13:00:00"),
      *                  @OA\Property(property="return_date", type="string", format="date-time", example="2025-02-06 12:00:00"),
@@ -133,14 +134,27 @@ class OrderTravelController extends Controller
      *              ),
      *          ),
      *     ),
+     *     @OA\Response(
+     *           response=500,
+     *           description="Erro inesperado ao criar pedido de viagem.",
+     *           @OA\JsonContent(
+     *               type="object",
+     *               @OA\Property(property="error", type="string", example="Erro inesperado ao criar pedido de viagem.")
+     *           )
+     *       ),
      * )
      */
     public function store(OrderTravelStoreRequest $request): JsonResponse
     {
-        return response()->json([
-            'message' => "Solicitação de viagem criada com sucesso",
-            'data' => $this->travelService->create($request->validated())
-        ], Response::HTTP_CREATED);
+        try {
+            return response()->json([
+                'message' => "Solicitação de viagem criada com sucesso.",
+                'data' => $this->travelService->create($request->validated())
+            ], Response::HTTP_CREATED);
+
+        } catch (Exception $exception) {
+            return response()->json(['error' => $exception->getMessage()], Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
     }
 
     /**
@@ -169,16 +183,65 @@ class OrderTravelController extends Controller
      *              example=3
      *          ),
      *         style="form"
+     *
      *      ),
-     *      @OA\Response(response=200, description="Produto atualizado com sucesso."),
-     *      @OA\Response(response=401, description="Não autenticado."),
-     *      @OA\Response(response=422, description="Conteúdo não processável."),
-     *      @OA\Response(response=500, description="Erro interno do servidor."),
-     *  ),
+     *      @OA\Response(
+     *           response=200,
+     *           description="Status do pedido alterado com sucesso.",
+     *           @OA\JsonContent(
+     *               type="object",
+     *                   @OA\Property(property="message", type="string", example="Status do pedido alterado com sucesso."),
+     *                   @OA\Property(property="data", type="object",
+     *                   @OA\Property(property="order_travel_status_id", type="integer", example="3"),
+     *                   @OA\Property(property="name_applicant", type="string", example="Teste de solicitante"),
+     *                   @OA\Property(property="destination", type="string", example="Belo Horizonte"),
+     *                   @OA\Property(property="departure_date", type="string", format="date-time", example="2025-02-06 13:00:00"),
+     *                   @OA\Property(property="return_date", type="string", format="date-time", example="2025-02-06 12:00:00"),
+     *                   @OA\Property(property="user_id", type="integer", example=1)
+     *               )
+     *           ),
+     *       ),
+     *      @OA\Response(
+     *           response=403,
+     *           description="Ação não permitida para o usuário.",
+     *           @OA\JsonContent(
+     *               type="object",
+     *               @OA\Property(property="message", type="string", example="Você não tem permissão para realizar esta ação.")
+     *           )
+     *       ),
+     *      @OA\Response(
+     *           response=422,
+     *           description="Solicitação inválida - dados fornecidos não são válidos.",
+     *           @OA\JsonContent(
+     *               type="object",
+     *               @OA\Property(property="errors", type="object",
+     *                    @OA\Property(property="order_travel_status_id", type="array",
+     *                        @OA\Items(type="string", example="O campo order travel status id deve ser igual a 2 (Aprovado) ou 3 (Cancelado).")
+     *                   ),
+     *               ),
+     *           ),
+     *      ),
+     *      @OA\Response(
+     *            response=500,
+     *            description="Erro inesperado ao atualizar o status do pedido.",
+     *            @OA\JsonContent(
+     *                type="object",
+     *                @OA\Property(property="error", type="string", example="Não foi possível atualizar o status da viagem. Por favor, entre em contato com o suporte.")
+     *            )
+     *        ),
+     *  )
+     * /
      * */
     public function update(OrderTravelUpdateRequest $request): JsonResponse
     {
-        return response()->json($this->travelService->updateStatusId($request->validated()));
+        try {
+            return response()->json([
+                'message' => "Status do pedido alterado com sucesso.",
+                'data' => $this->travelService->updateStatusId($request->validated())
+            ]);
+        } catch (Exception $exception) {
+            return response()->json(['error' => $exception->getMessage()], Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
     }
 
     /**
